[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = "Monorepo for local development"
authors = ["frickp <peter.l.frick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.1"
transformers = "^4.22.2"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
Cython = "^0.29.32"
pybind11 = "^2.10.0"
numpy = "^1.23.3"
pythran = "^0.12.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
